--- a/cv/r/index.html
+++ b/cv/r/index.html
@@ -2,15 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Refresh" content="0; url='https://alexyvanot.fr'" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Redirecting...</title>
 </head>
 <body>
-    <object data="CV_Alexy_Vanot.pdf" type="application/pdf" width="100%" height="100%">
-        <p>It appears you don't have a PDF plugin for this browser.
-        No biggie... you can <a href="CV_Alexy_Vanot.pdf">click here to
-        download the PDF file.</a></p>
-    </object>
 </body>
 </html>
