Added Download CV button

--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Hire Me!</h2>
 					<p>As a student, I am actively looking for customers to sell my services at knock-down prices so that I can grow by improving my skills.</p>
-					<p><a href="#" class="btn btn-default btn-lg">Contact Me</a></p>
+					<p><a href="mailto:contact@alexyvanot.fr" class="btn btn-default btn-lg">Contact Me</a> <a href="/cv/r/CV_Alexy_Vanot.pdf" class="btn btn-default btn-lg">🡻 Download CV</a></p>
 				</div>
 			</div>
 		</div>
