Correcting a mistake from Services section

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 								<i class="icon-genius"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Web Developent</h3>
+								<h3>Web Development</h3>
 								<p>Development of an SPA with VueJS to create responsive software applications and websites.</p>
 							</div>
 						</div>
