--- a/cv/r/index.html
+++ b/cv/r/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="Refresh" content="0; url='https://alexyvanot.fr'" />
+    <meta http-equiv="Refresh" content="0; url='https://alexyvanot.github.io'" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting...</title>
