--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 							<div class="profile-thumb" style="background: url(https://avatars.githubusercontent.com/u/48055002);"></div>
 							<!-- <div class="profile-thumb" style="background: url(images/user-3.jpg);"></div> -->
 							<h1><span>Alexy Vanot</span></h1>
-							<h3><span>Software Developer - 3rd Year Student</span></h3>
+							<h3><span>Software Developer - 4th Year Student</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
 									<li><a href="https://github.com/alexyvanot/" target="_blank"><i class="icon-github2"></i></a></li>
@@ -106,7 +106,7 @@
 				<div class="col-md-8">
 					<h2>Hello There!</h2>
 					<!-- Je suis un étudiant en 3e année à l'Intech, passionné par les concepts abstraits en programmation et le monde de la réalité virtuelle. Mon parcours dans le développement informatique a débuté grâce à ma passion pour Minecraft et la communauté de modding. J'ai rapidement acquis des compétences en programmation et j'ai choisi de poursuivre mes études à l'Intech pour approfondir mes connaissances et me familiariser avec les meilleures pratiques du secteur. Mon objectif est de créer des expériences innovantes dans le domaine du développement informatique, en particulier dans le domaine de la réalité virtuelle. -->
-					<p>I'm a 3rd year student at Intech, with a passion for abstract programming concepts and the world of virtual reality. My path in computer development began thanks to my passion for Minecraft and the modding community. I quickly acquired programming skills and chose to continue my studies at Intech to deepen my knowledge and familiarize myself with best practices in the industry. My aim is to create innovative experiences in computer development, particularly in the field of virtual reality.</p>
+					<p>I'm a 4th year student, with a passion for abstract programming concepts and the world of virtual reality. My path in computer development began thanks to my passion for Minecraft and the modding community. I quickly acquired programming skills and chose to continue my studies to deepen my knowledge and familiarize myself with best practices in the industry. My aim is to create innovative experiences in computer development, particularly in the field of virtual reality.</p>
 					<!-- Je suis impatient de continuer à élargir mes horizons technologiques et de contribuer à l'innovation dans le domaine du développement informatique. Mon objectif est de continuer à apprendre, à grandir et à apporter une valeur ajoutée aux projets auxquels je participe. Je suis convaincu que la combinaison de ma passion pour les concepts abstraits en programmation et mon intérêt pour la réalité virtuelle me permettra de créer des expériences exceptionnelles et d'ouvrir de nouvelles perspectives dans le monde numérique. -->
 					<p>I'm looking forward to continuing to broaden my technological horizons and contributing to innovation in the field of IT development. My aim is to continue learning, growing and adding value to the projects I take part in. I'm convinced that the combination of my passion for abstract programming concepts and my interest in virtual reality will enable me to create exceptional experiences and open up new perspectives in the digital world.</p>
 					<p>
@@ -149,26 +149,25 @@
 							</div>
 						</li>
 						-->
-						<!-- right template
 						<li class="timeline-inverted animate-box">
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Junior Developer</h3>
-									<span class="company">Company Name - 2013 - 2015</span>
+									<h3 class="timeline-title">Full-Stack Developer</h3>
+									<span class="company">☀️ Synchrotron SOLEIL - Sept. 2023 - Now</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Test automation, CI/CD pipeline setup, development of Java, ReactJS, and NodeJS applications, alongside Linux Debian/Red Hat administration.</p>
+									<p>Docker is utilized for container management and development environment orchestration.</p>
 								</div>
 							</div>
 						</li>
-						-->
 						<li class="animate-box timeline-unverted">
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Renovation Administrative Trainee</h3>
-									<span class="company">AGH Bâtiment - August 2022</span>
+									<span class="company">🏢 AGH Bâtiment - August 2022</span>
 								</div>
 								<div class="timeline-body">
 									<p>Development of management interfaces</p>
@@ -215,7 +214,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Master Degree</h3>
-									<span class="company">Intech - 2021 - 2025</span>
+									<span class="company">ESIEA - 2024 - 2026</span>
 								</div>
 								<div class="timeline-body">
 									<p>This diploma is in the process of being obtained</p>
@@ -232,9 +231,7 @@
 									<span class="company">Intech - 2021 - 2023</span>
 								</div>
 								<div class="timeline-body">
-									<p>This diploma is in the process of being obtained</p>
 									<p>Master's Degree Level Bac+3</p>
-									<p>French RNCP31678 Level 6 qualification</p>
 								</div>
 							</div>
 						</li>
@@ -243,10 +240,11 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Graduation</h3>
-									<span class="company">Pierre Mendès France Savigny-le-Temple - 2017 - 2020</span>
+									<span class="company">Pierre Mendès France at Savigny-le-Temple - 2017 - 2020</span>
 								</div>
 								<div class="timeline-body">
 									<p>Specialized baccalaureate in life and earth sciences and economic and social sciences</p>
+									<p>My profile is rather literary, which sets me apart from other developers. I have a strong background in literature and social sciences, which allows me to have a different perspective on the projects I work on.</p> 
 								</div>
 							</div>
 						</li>
@@ -596,7 +594,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Hire Me!</h2>
-					<p>As a student, I am actively looking for customers to sell my services at knock-down prices so that I can grow by improving my skills.</p>
+					<p>As a student, I am actively looking for customers to sell my services at knock-down prices so that I can grow by improving my skills by contributing to your projects within your dev-team.</p>
 					<p><a href="mailto:contact@alexyvanot.fr" class="btn btn-default btn-lg">Contact Me</a> <a href="/cv/r/CV_Alexy_Vanot.pdf" class="btn btn-default btn-lg">🡻 Download CV</a></p>
 				</div>
 			</div>
@@ -604,7 +602,7 @@
 	</div>
 
 	<div id="fh5co-consult">
-		<div class="video fh5co-video" style="background-image: url(images/cover_bg_1.jpg);">
+		<div class="video fh5co-video" style="background-image: url(images/vr.jpeg);">
 			<div class="overlay"></div>
 		</div>
 		<div class="choose animate-box">
