--- a/index.html
+++ b/index.html
@@ -696,6 +696,7 @@
 		body {
 			top: 0px !important;
 		}
+		iframe.skiptranslate { visibility: hidden !important; }
 	</style>
 
 	<!-- Remove lateral scroll bar -->
