--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 									<span class="company">Intech - 2021 - 2023</span>
 								</div>
 								<div class="timeline-body">
-									<p>Master's Degree Level Bac+3</p>
+									<p>Graduation's Degree Level BAC+3 in computer engineering</p>
 								</div>
 							</div>
 						</li>
@@ -245,7 +245,7 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Graduation</h3>
+									<h3 class="timeline-title">Baccalauréat Graduation</h3>
 									<span class="company">Pierre Mendès France at Savigny-le-Temple - 2017 - 2020</span>
 								</div>
 								<div class="timeline-body">
