--- a/src/app.html
+++ b/src/app.html
@@ -13,7 +13,7 @@
 		
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="off">
+	<body data-sveltekit-preload-data="hover" data-sveltekit-preload-code="hover">
 		<div id="svelte" style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
